Create custom config to use ollama and openai, defined on request