@@ -1,5 +1,6 @@
 package com.example.aichatbot.service;
 
+import com.example.aichatbot.model.AIType;
 import org.springframework.ai.chat.ChatClient;
 import org.springframework.ai.chat.ChatResponse;
 import org.springframework.ai.chat.messages.Message;
@@ -12,22 +13,23 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 public class ChatService {
 
-    private final ChatClient chatClient;
+    private final Map<AIType, ChatClient> chatClients;
     private final VectorDatasetService vectorSearchService;
     private static final int MAX_RELEVANT_DOCS = 10;
 
     @Autowired
-    public ChatService(ChatClient chatClient, VectorDatasetService vectorSearchService) {
-        this.chatClient = chatClient;
+    public ChatService(Map<AIType, ChatClient> chatClients, VectorDatasetService vectorSearchService) {
+        this.chatClients = chatClients;
         this.vectorSearchService = vectorSearchService;
     }
 
-    public String chat(String userInput) {
+    public String chat(String userInput, AIType aiType) {
         // 1. Buscar documentos relevantes en Qdrant
         List<Document> relevantDocs = vectorSearchService.search(userInput, MAX_RELEVANT_DOCS);
 
@@ -38,13 +40,12 @@ public class ChatService {
         List<Message> messages = new ArrayList<>();
 
         // Mensaje del sistema con instrucciones y contexto
-        String systemPrompt = String.format(
-                "Eres un asistente útil y preciso. Responde a las preguntas basándote en el siguiente contexto cuando sea relevante:\n\n%s\n\n"
-                        +
-                        "Si el contexto no es relevante para la pregunta, responde basándote en tu conocimiento general. "
-                        +
-                        "Si no estás seguro, indica que no tienes suficiente información.",
-                context);
+        String systemPrompt = """
+                Eres un asistente útil y preciso. Responde a las preguntas basándote en el siguiente contexto cuando sea relevante: %s
+                Si el contexto no es relevante para la pregunta, responde basándote en tu conocimiento general, pero sin mentir ni invetnar.
+                Si no estás seguro, indica que no tienes suficiente información.
+                Ten en cuenta que somos una empresa que se llama Onebox, usa tono formal y nunca hables sobre el contexto que tienes, solo contesta.
+                """.formatted(context);
         messages.add(new SystemMessage(systemPrompt));
 
         // Mensaje del usuario
@@ -52,7 +53,8 @@ public class ChatService {
 
         // 4. Crear y enviar el prompt
         Prompt prompt = new Prompt(messages);
-        ChatResponse response = chatClient.call(prompt);
+        ChatClient selectedClient = chatClients.get(aiType);
+        ChatResponse response = selectedClient.call(prompt);
 
         return response.getResult().getOutput().getContent();
     }
